Fix alignment issues, move responsive breakpoint to 800px.

--- a/css/main.styl
+++ b/css/main.styl
@@ -39,7 +39,7 @@ body > header
 
     h1
         font-size: 2rem
-        margin: 0.5em 0
+        margin: 1rem 0
         margin-right: -2rem
 
     h2
@@ -122,7 +122,7 @@ body > header
 
 .content
     margin-left: $sidebar_width
-    padding: 0 3rem
+    padding: 0 5rem
 
 ul.posts
     list-style-type: none
@@ -141,12 +141,12 @@ ul.posts
 
 // Blog post article
 .post
-    padding: 1rem 0
+    padding: 2rem 0
     max-width: 35em
 
     header
         h1
-            margin: 1.5rem 0 0.2rem
+            margin: 1.3rem 0 0.2rem
             font-size: 2rem
             font-style: italic
             line-height: 1
@@ -169,7 +169,7 @@ ul.posts
 
 
 // Mobile header/footer:
-@media screen and (max-width: 600px)
+@media screen and (max-width: 800px)
     body
         padding-top: 110px   // Leave room for heading to be absolutely positioned here
 
@@ -185,7 +185,7 @@ ul.posts
             top: 0
             left: 0
             width: 100%
-            padding: 1rem
+            padding: 1rem 2rem
             background: #eee
             box-shadow: 0 0 5px rgba(0,0,0, 0.3)
 
@@ -194,6 +194,7 @@ ul.posts
 
     .content
         margin-left: 0
+        padding: 0 2rem
 
     .post
         background: $backgroundColour
